--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 v1.5.3 - TBD
+NEW:
 CHANGED:
+  Items in the Materials Creative Tab are sorted by Item type again, instead of by Material type.
   The count_blocks and sample_ores commands max size has increased from 32 to 40.
 
 
