Minor Laser Update

--- a/changelog.txt
+++ b/changelog.txt
@@ -11,7 +11,10 @@ REMOVED:
   Removed Gem shards. (Been meaning to do this for a while.)
    - As a result, the Crystal Matter Generator now produces 1 random Gem every 1.5 hours using
      2,700,000 total energy.
+  You can no longer control whether Lasers set Entities on fire. Now, Lasers will always set Entities on fire.
+  You can no longer configure whether Laser damage is fixed or scales with world difficulty.
 FIXED:
+  We now have a translated death message if you died from a Laser.
   Fixed not dropping custom mob loot for the Zombified Piglin, ever since the ID changed in Minecraft 1.16.
 
 
