--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@ v1.5.3 - TBD
 NEW:
   Unidentified Item drops now drop for the Piglin, Piglin Brute, Hoglin, Zoglin, and the Warden.
   New debug feature: We now allow more Tag types to be dumped in ADDSynthCore config.
+  Changed the /addsynthcore count_blocks command to also accept block tags.
 CHANGED:
   The Matter Compressor's crafting recipe changed to use 3 Energy Stabilizers instead of 1.
   Changed the Crystal Energy Extractor's crafting recipe to use Silver Plates instead of Aluminum Plates.
